@@ -51,7 +51,7 @@ def debugger():
 	users.save_user_data()
 
 if __name__ == "__main__":
-	os.chdir(os.path.dirname(os.path.abspath(sys.argv[0])))
+	general.secure_chdir()
 	if USE_LOG:
 		general.use_log()
 	
